--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "durandal": "~2.1.0",
     "foundation": "~5.5.2",
     "moment": "~2.10.3",
-    "lodash": "~3.10.0"
+    "lodash": "~3.10.0",
+    "font-awesome": "~4.3.0"
   }
 }
