--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "lodash": "~3.10.0",
     "font-awesome": "~4.3.0",
     "knockout.punches": "~0.5.1",
-    "d3": "~3.5.6"
+    "d3": "~3.5.6",
+    "firebase": "~2.2.7"
   }
 }
