--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
     "gulp": "^3.9.0",
     "jasmine": "^2.3.1",
     "karma": "^0.13.3"
+  },
+  "devDependencies": {
+    "gulp-concat": "^2.6.0",
+    "gulp-sass": "^2.0.4",
+    "gulp-uglify": "^1.2.0"
   }
 }
