--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   },
   "devDependencies": {
     "gulp-concat": "^2.6.0",
+    "gulp-minify-css": "^1.2.0",
     "gulp-sass": "^2.0.4",
-    "gulp-uglify": "^1.2.0"
+    "gulp-uglify": "^1.2.0",
+    "gulp-util": "^3.0.6"
   }
 }
